// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`driver.route.brain.acceptance given: [case1] the stone declares a brain, and this driver is unenrolled when: [t0] \`route.drive\` is run then: stdout has good vibes, cause block scrubbed 1`] = `
"🦉 where were we?

🗿 route.drive
   ├─ where do we go?
   │  ├─ route = .
   │  ├─ stone = 1.vision
   │  └─ brain = claude-sonnet-5[1m]
   │
   └─ ✋ halted, brain switch could not land
      ├─ <cause-block>
      │
      └─ or: remove \`brain:\` from the stone's guard, and inherit the brain deliberately
         └─ 1.vision.guard
"
`;

exports[`driver.route.brain.acceptance given: [case2] the guard says \`model:\` where the key is \`brain:\` when: [t0] \`route.drive\` is run then: stdout has good vibes 1`] = `
"🦉 where were we?

🗿 route.drive
   ├─ where do we go?
   │  ├─ route = .
   │  └─ stone = 1.vision
   │
   ├─ are you here?
   │  ├─ when ready for review, run:
   │  │  └─ rhx route.stone.set --stone 1.vision --as arrived
   │  └─ when ready to continue, run:
   │     └─ rhx route.stone.set --stone 1.vision --as passed
   │
   ├─ here's the stone
   │  ├─
   │  │
   │  │  # 1.vision
   │  │  
   │  │  describe the vision for this feature
   │  │  
   │  │  define:
   │  │  - the goal
   │  │  - the outcome
   │  │  - the success criteria
   │  │  
   │  └─
   │
   └─ are you here?
      ├─ when ready for review, run:
      │  └─ rhx route.stone.set --stone 1.vision --as arrived
      └─ when ready to continue, run:
         └─ rhx route.stone.set --stone 1.vision --as passed
"
`;

exports[`driver.route.brain.acceptance given: [case3] the guard carries an unknown key when: [t0] the key is a NEAR MISS of a known one then: stdout has good vibes 1`] = `
"🦉 where were we?

🗿 route.drive
   ├─ where do we go?
   │  ├─ route = .
   │  └─ stone = 1.vision
   │
   ├─ are you here?
   │  ├─ when ready for review, run:
   │  │  └─ rhx route.stone.set --stone 1.vision --as arrived
   │  └─ when ready to continue, run:
   │     └─ rhx route.stone.set --stone 1.vision --as passed
   │
   ├─ here's the stone
   │  ├─
   │  │
   │  │  # 1.vision
   │  │  
   │  │  describe the vision for this feature
   │  │  
   │  │  define:
   │  │  - the goal
   │  │  - the outcome
   │  │  - the success criteria
   │  │  
   │  └─
   │
   └─ are you here?
      ├─ when ready for review, run:
      │  └─ rhx route.stone.set --stone 1.vision --as arrived
      └─ when ready to continue, run:
         └─ rhx route.stone.set --stone 1.vision --as passed
"
`;

exports[`driver.route.brain.acceptance given: [case3] the guard carries an unknown key when: [t1] the key is near NO known one then: stdout has good vibes 1`] = `
"🦉 where were we?

🗿 route.drive
   ├─ where do we go?
   │  ├─ route = .
   │  └─ stone = 1.vision
   │
   ├─ are you here?
   │  ├─ when ready for review, run:
   │  │  └─ rhx route.stone.set --stone 1.vision --as arrived
   │  └─ when ready to continue, run:
   │     └─ rhx route.stone.set --stone 1.vision --as passed
   │
   ├─ here's the stone
   │  ├─
   │  │
   │  │  # 1.vision
   │  │  
   │  │  describe the vision for this feature
   │  │  
   │  │  define:
   │  │  - the goal
   │  │  - the outcome
   │  │  - the success criteria
   │  │  
   │  └─
   │
   └─ are you here?
      ├─ when ready for review, run:
      │  └─ rhx route.stone.set --stone 1.vision --as arrived
      └─ when ready to continue, run:
         └─ rhx route.stone.set --stone 1.vision --as passed
"
`;

exports[`driver.route.brain.acceptance given: [case4] the stone declares no brain at all when: [t0] \`route.drive\` is run with no guard then: stdout has good vibes 1`] = `
"🦉 where were we?

🗿 route.drive
   ├─ where do we go?
   │  ├─ route = .
   │  └─ stone = 1.vision
   │
   ├─ are you here?
   │  ├─ when ready for review, run:
   │  │  └─ rhx route.stone.set --stone 1.vision --as arrived
   │  └─ when ready to continue, run:
   │     └─ rhx route.stone.set --stone 1.vision --as passed
   │
   ├─ here's the stone
   │  ├─
   │  │
   │  │  # 1.vision
   │  │  
   │  │  describe the vision for this feature
   │  │  
   │  │  define:
   │  │  - the goal
   │  │  - the outcome
   │  │  - the success criteria
   │  │  
   │  └─
   │
   └─ are you here?
      ├─ when ready for review, run:
      │  └─ rhx route.stone.set --stone 1.vision --as arrived
      └─ when ready to continue, run:
         └─ rhx route.stone.set --stone 1.vision --as passed
"
`;

exports[`driver.route.brain.acceptance given: [case5] a passed stone dispatched a brain; this stone declares none when: [t0] \`route.drive\` is run then: stdout has good vibes 1`] = `
"🦉 where were we?

🗿 route.drive
   ├─ where do we go?
   │  ├─ route = .
   │  ├─ stone = 2.criteria
   │  └─ brain = claude-opus-5[1m]
   │
   ├─ are you here?
   │  ├─ when ready for review, run:
   │  │  └─ rhx route.stone.set --stone 2.criteria --as arrived
   │  └─ when ready to continue, run:
   │     └─ rhx route.stone.set --stone 2.criteria --as passed
   │
   ├─ here's the stone
   │  ├─
   │  │
   │  │  # 2.criteria
   │  │  
   │  │  define the acceptance criteria
   │  │  
   │  │  specify:
   │  │  - the inputs
   │  │  - the outputs
   │  │  - the edge cases
   │  │  
   │  └─
   │
   └─ are you here?
      ├─ when ready for review, run:
      │  └─ rhx route.stone.set --stone 2.criteria --as arrived
      └─ when ready to continue, run:
         └─ rhx route.stone.set --stone 2.criteria --as passed
"
`;
